fixed mobile navbar collapse issue

--- a/my-portfolio/src/app/components/nav-bar/nav-bar.component.scss
+++ b/my-portfolio/src/app/components/nav-bar/nav-bar.component.scss
@@ -40,3 +40,14 @@ ul > li > a:hover, ul > li > a:focus {
 a, u {
     text-decoration: none;  
 } */
+@import 'variables';
+@import 'customTheme';
+@import 'staticTheme';
+
+#navbar2SupportedContent {
+    border-bottom: 5px solid-white;
+}
+
+.nav-link {
+    font-family: $headings-font-family;
+}
